2008-03-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: set moduleset uri to fake repository
	object, so patches are downloaded from the right location.
	(closes: #524328)

2008-03-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:

	Oops, use the correct branch for loudmouth.

2008-03-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.24.modules: Update loudmouth to the
	2.0 git branch since that is the one gossip trunk
	requires.

2008-03-31  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.22.modules: Update loudmouth to the
	2.0 git branch since that is the one gossip trunk
	requires.

2008-03-30  Owen Taylor  <otaylor@redhat.com>

	* modulesets/gnome-suites-2.{22,24}.modules: Make gnome-desktop depend
	on gvfs ... gvfs is used in the autogen.sh.

	* modulesets/online-desktop.modules: Switch back to depending
	on gnome-2.22.modules until the new gnome-session unbreaks a bit.

2008-03-30  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: branching gnome-icon-theme for
	2.22.

2008-03-29  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: branching eel, nautilus and
	gvfs for 2.22.

2008-03-27  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: branching gnome-settings-daemon
	and gnome-control-center for 2.22.

2008-03-27  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.24.modules: added taglib-sharp as a module and as
	a dependency for banshee, (patch by John Carr, closes: #524621)

2008-03-26  Owen Taylor  <otaylor@redhat.com>

	* modulesets/online-desktop.modules: Rename mugshot module
	to mugshot-client, repoint to new SVN location.

2008-03-25  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: added d-feet.

2008-03-25  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
