@@ -1,0 +1,3 @@
+
+bin_PROGRAMS = hello
+hello_SOURCES = hello.c
