@@ -1,0 +1,7 @@
+
+AC_INIT([hello], [1.0])
+AM_INIT_AUTOMAKE([1.9 foreign])
+
+AC_PROG_CC
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
