@@ -1,0 +1,4 @@
+
+from distutils.core import setup, Extension
+
+setup(name='hello', scripts=['hello'])
