@@ -1,5 +1,13 @@
 2008-03-31  Frederic Peters  <fpeters@0d.be>
 
+	* tests/autotools/Makefile.am, tests/autotools/autogen.sh,
+	tests/autotools/configure.in, tests/autotools/hello.c,
+	tests/distutils/hello, tests/distutils/setup.py,
+	tests/tests.py: added tests against autotools and distutils modules,
+	contributed by Mark Seaborn  (closes: #524205)
+
+2008-03-31  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/tarball.py: set moduleset uri to fake repository
 	object, so patches are downloaded from the right location.
 	(closes: #524328)
